--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,9 @@
 <div style="width: 100%; text-align:center">
   <img mat-card-image src="assets/images/branco.png" style="width: 200px">
 </div>
-<mat-expansion-panel [disabled]="isDisabled">
-</mat-expansion-panel>
+<mat-nav-list>
+    <mat-list-item (click)="goto('/')">
+      <mat-icon matListIcon>home</mat-icon>
+      <h2 matLine> Home </h2>
+    </mat-list-item>
+</mat-nav-list>
