--- a/src/app/components/election/detail/detail.component.scss
+++ b/src/app/components/election/detail/detail.component.scss
@@ -1,12 +1,49 @@
-mat-card {
-    float: left;
-    margin: 5px;
-}
+.loading {
+    width: 100px;
+    height: 100px;
+  
+    position:absolute; /*it can be fixed too*/
+    left:0; right:0;
+    top:0; bottom:0;
+    margin:auto;
+  }
+  
 
+.submenu {
+    margin-bottom: 10px;
+}
 .description-card {
     width: 300px;
 }
 
 .description-content {
+    position: absolute;
+    margin: 10px;
+    top: 80px;bottom: 0; left: 0; right: 0;
     text-align: justify;
+    overflow-y: auto;
+}
+
+.card-grid-title {
+    position: absolute;
+    left: 0; top: 0;
+}
+
+.card-grid {
+    position: absolute;
+    top:0; bottom: 0;left: 0;right: 0;
+    margin: 5px;
+}
+
+.result {
+    color:black;
+}
+
+.result-content {
+    top: 90px;
+    text-align: center;
+}
+
+mat-grid-tile {
+    // background: lightblue;
 }
