--- a/src/app/components/error-dialog/error-dialog.component.html
+++ b/src/app/components/error-dialog/error-dialog.component.html
@@ -1,10 +1,9 @@
-<div>
-    <div>
-        <p>
-            Reason: {{data.reason}}
-        </p>
-        <p>
-            Status: {{data.status}}
-        </p>
-    </div>
+<mat-toolbar style="background: transparent;">
+        <div style="width: 100%; text-align: center">
+            <mat-icon style="margin-right: 5px">error</mat-icon>
+            <span> Ops.. Algo Deu Errado :(</span>
+        </div>
+</mat-toolbar>
+<div style="width: 100%; text-align: center">
+    <p>{{data.reason}}</p>    
 </div>
