--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,11 @@ overflow-x: hidden;
 width: 0px; /* remove scrollbar space */
 background: transparent; // optional: just make scrollbar invisible /
 }
+
+.green-snackbar {
+  background: #3bdb43 !important;
+}
+
+.mat-dialog-container {
+  background: brown !important;
+}
