--- a/src/app/components/election/election.component.html
+++ b/src/app/components/election/election.component.html
@@ -1,5 +1,5 @@
 <div class="election-box">
-  <mat-horizontal-stepper [linear]="false" #stepper labelPosition="bottom">
+  <mat-horizontal-stepper [linear]="true" #stepper labelPosition="bottom">
     <mat-step [stepControl]="electionFormGroup" >
       <form [formGroup]="electionFormGroup" >
         <ng-template matStepLabel>Criar Eleição</ng-template>
@@ -110,7 +110,6 @@
       <div *ngIf="enableCSV()">
         <p>
             <input type="file"  id="theFile" (change)="onFileSelect($event)">
-            <mat-button-toggle (click)="addVoters2()">Carregar</mat-button-toggle>
         </p>
       </div>
       <div style="text-align: center">
