--- a/src/app/components/error-dialog/error-dialog.component.html
+++ b/src/app/components/error-dialog/error-dialog.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar style="background: transparent;">
         <div style="width: 100%; text-align: center">
             <mat-icon style="margin-right: 5px">error</mat-icon>
-            <span> Ops.. Algo Deu Errado :(</span>
+            <span style="position: relative; top: -4px;">{{title}}</span>
         </div>
 </mat-toolbar>
 <div style="width: 100%; text-align: center">
