--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,8 +2,8 @@
   <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="isReady">
-  <div style="width: 100%; text-align:center">
-    <img mat-card-image src="assets/images/branco.png" style="width: 200px">
+  <div style="width: 100%; text-align:center; margin-top: 50px; margin-bottom:50px;">
+    <h1>Eleições</h1>
   </div>
 
   
