--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,7 @@
+<div style="width: 100%; text-align:center">
+    <img mat-card-image src="assets/images/branco.png" class="logo">
+    <p class="subtitle">Sistema de Eleição Eletrônica</p>
+  </div>
 <mat-card class="login-box">
 <mat-card-title>Login</mat-card-title>
 <mat-card-content>
