--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -16,3 +16,16 @@
 .form-login {
   width: 100%;
 }
+
+.subtitle {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  top: 120px;
+}
+
+.logo {
+  position: relative;
+  top: 30px;
+  width: 200px;
+}
