--- a/src/app/components/user/new/new.component.html
+++ b/src/app/components/user/new/new.component.html
@@ -5,6 +5,10 @@
 
         <form [formGroup]="userFormGroup">
         <mat-form-field class="form-login">
+            <input matInput placeholder="Username" formControlName="username">
+        </mat-form-field>
+
+        <mat-form-field class="form-login">
             <input matInput placeholder="Email" formControlName="email">
         </mat-form-field>
 
